force-app/main/default/objects/Case_Product__c/fields/NCI_Product_Purchased__c.field-meta.xml
<CustomField>
    <fullName>NCI_Product_Purchased__c</fullName>
    <inlineHelpText>Select Product Purchased by Customer</inlineHelpText>
    <label>NCI Product Purchased</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>NCI_Product_Group__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3M™ Adhesive Sealant 760 UV (Black, Gray, White)</fullName>
            </value>
            <value>
                <fullName>3M™ Branded Bulk Spray adhesives - any solvent or water based formulation</fullName>
            </value>
            <value>
                <fullName>3M™ Branded cylinder adhesive - 94CA, 94ET - Intermediate cylinder (125# - 187.5#)</fullName>
            </value>
            <value>
                <fullName>3M™ Branded cylinder adhesive - 94CA, 94ET - Jumbo cylinder (260# - 375#)</fullName>
            </value>
            <value>
                <fullName>3M™ Branded cylinder adhesive - 94CA, 94ET - Large cylinder (26 lbs - 37.5 lbs)</fullName>
            </value>
            <value>
                <fullName>3M™ Branded cylinder adhesive - all formulations other than 94CA, 94ET, HF70) - Intermediate cylinder (125# - 187.5#)</fullName>
            </value>
            <value>
                <fullName>3M™ Branded cylinder adhesive - all formulations other than 94CA, 94ET, HF70) - Jumbo cylinder (260# - 375#)</fullName>
            </value>
            <value>
                <fullName>3M™ Branded cylinder adhesive - all formulations other than 94CA, 94ET, HF70) - Large cylinder (26lbs - 37.5 lbs)</fullName>
            </value>
            <value>
                <fullName>3M™ Branded cylinder adhesive - Holdfast 70 - Intermediate cylinder (125# - 187.5#)</fullName>
            </value>
            <value>
                <fullName>3M™ Branded cylinder adhesive - Holdfast 70 - Jumbo cylinder (260# - 375#)</fullName>
            </value>
            <value>
                <fullName>3M™ Branded cylinder adhesive - Holdfast 70 - Large cylinder (26lbs - 37.5 lbs)</fullName>
            </value>
            <value>
                <fullName>3M™ FoamFast 74 Cylinder Spray Adhesive- Clear</fullName>
            </value>
            <value>
                <fullName>3M™ FoamFast 74 Cylinder Spray Adhesive- Orange</fullName>
            </value>
            <value>
                <fullName>3M™ General Purpose 60 CA Cylinder Spray Adhesive</fullName>
            </value>
            <value>
                <fullName>3M™ Hi-Strength 90 Cylinder Spray Adhesive</fullName>
            </value>
            <value>
                <fullName>3M™ Hi-Strength 94 ET Cylinder Spray Adhesive- Clear</fullName>
            </value>
            <value>
                <fullName>3M™ Hi-Strength 94 ET Cylinder Spray Adhesive- Red</fullName>
            </value>
            <value>
                <fullName>3M™ Hi-Strength Laminating 92 Cylinder Spray Adhesive- Clear</fullName>
            </value>
            <value>
                <fullName>3M™ Hi-Strength Laminating 92 Cylinder Spray Adhesive- Red</fullName>
            </value>
            <value>
                <fullName>3M™ Hi-Strength Non-Flammable 98NF Cylinder Spray Adhesive- Clear</fullName>
            </value>
            <value>
                <fullName>3M™ Hi-Strength Non-Flammable 98NF Cylinder Spray Adhesive- Red</fullName>
            </value>
            <value>
                <fullName>3M™ Hi-Strength Postforming 94 CA Cylinder Spray Adhesive- Clear</fullName>
            </value>
            <value>
                <fullName>3M™ Hi-Strength Postforming 94 CA Cylinder Spray Adhesive- Red</fullName>
            </value>
            <value>
                <fullName>3M™ HoldFast 70 Cylinder Spray Adhesive</fullName>
            </value>
            <value>
                <fullName>3M™ Hot Melt Adhesive 3750 LM AE</fullName>
            </value>
            <value>
                <fullName>3M™ Hot Melt Adhesive 3762 LM AE</fullName>
            </value>
            <value>
                <fullName>3M™ Hot Melt Adhesive 3776 LM AE</fullName>
            </value>
            <value>
                <fullName>3M™ Hot Melt Adhesive 3792 LM AE</fullName>
            </value>
            <value>
                <fullName>3M™ Hot Melt Adhesives 3731 Q</fullName>
            </value>
            <value>
                <fullName>3M™ Hot Melt Adhesives 3738 Q</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>