force-app/main/default/objects/Case_Product__c/fields/NCI_Quantity_Purchased__c.field-meta.xml
<CustomField>
    <fullName>NCI_Quantity_Purchased__c</fullName>
    <inlineHelpText>Select quantity of product purchased</inlineHelpText>
    <label>NCI Quantity Purchased</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>NCI_Product_Group__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>10 Cases</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>2 Cases</fullName>
            </value>
            <value>
                <fullName>3 Cases</fullName>
            </value>
            <value>
                <fullName>5 Cases</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>