force-app/main/default/objects/Case_Product__c/fields/NCI_Size_Purchased__c.field-meta.xml
<CustomField>
    <fullName>NCI_Size_Purchased__c</fullName>
    <inlineHelpText>Select size of product purchased</inlineHelpText>
    <label>NCI Size Purchased</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>NCI_Product_Group__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>1 case 2 " width</fullName>
            </value>
            <value>
                <fullName>1 case 3" width</fullName>
            </value>
            <value>
                <fullName>1 case 4" width</fullName>
            </value>
            <value>
                <fullName>290 mL cartridge</fullName>
            </value>
            <value>
                <fullName>300 mL cartridge</fullName>
            </value>
            <value>
                <fullName>305 mL cartridge</fullName>
            </value>
            <value>
                <fullName>310 ml cartridge</fullName>
            </value>
            <value>
                <fullName>37 ml Duo-pak</fullName>
            </value>
            <value>
                <fullName>400 mL Duo-pak</fullName>
            </value>
            <value>
                <fullName>400 ml sausage pack</fullName>
            </value>
            <value>
                <fullName>45 ml</fullName>
            </value>
            <value>
                <fullName>45 ml Duo-pak</fullName>
            </value>
            <value>
                <fullName>48.5 mL Duo-pak</fullName>
            </value>
            <value>
                <fullName>490 ml Duo-pak</fullName>
            </value>
            <value>
                <fullName>50 ml Duo-pak</fullName>
            </value>
            <value>
                <fullName>55 Gal Drum</fullName>
            </value>
            <value>
                <fullName>5 gal pail</fullName>
            </value>
            <value>
                <fullName>600 ml sausage pack</fullName>
            </value>
            <value>
                <fullName>Case</fullName>
            </value>
            <value>
                <fullName>Cylinder</fullName>
            </value>
            <value>
                <fullName>Large</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>