force-app/main/default/objects/Case_Product__c/fields/PAS_Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>PAS_Reason_Code__c</fullName>
    <label>PAS Reason Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>600 Tape Construction Change</fullName>
            </value>
            <value>
                <fullName>Accessory Failure</fullName>
            </value>
            <value>
                <fullName>Activation Issue</fullName>
            </value>
            <value>
                <fullName>Additional Information Needed</fullName>
            </value>
            <value>
                <fullName>Adhesion</fullName>
            </value>
            <value>
                <fullName>Adhesion - Adh Back</fullName>
            </value>
            <value>
                <fullName>Adhesion - High</fullName>
            </value>
            <value>
                <fullName>Adhesion - Hook/Loop</fullName>
            </value>
            <value>
                <fullName>Adhesion Loss - Hollow Arrow</fullName>
            </value>
            <value>
                <fullName>Adhesion Lost With Damage</fullName>
            </value>
            <value>
                <fullName>Adhesion - Low</fullName>
            </value>
            <value>
                <fullName>Adhesion - Low - Backplate Hollow Arrow</fullName>
                <isActive>false</isActive>
                <label>Adhesion - Low - Backplate Hollow Arrow</label>
            </value>
            <value>
                <fullName>Adhesion - Low - Hollow Arrow</fullName>
                <isActive>false</isActive>
                <label>Adhesion - Low - Hollow Arrow</label>
            </value>
            <value>
                <fullName>Adhesion Low - Home Depot Boxes</fullName>
            </value>
            <value>
                <fullName>Adhesion - Low - Lost with Damage</fullName>
                <isActive>false</isActive>
                <label>Adhesion - Low - Lost with Damage</label>
            </value>
            <value>
                <fullName>Adhesion to Backplate - Hollow Arrow</fullName>
            </value>
            <value>
                <fullName>Adhesive Caused Color Change on Surface</fullName>
            </value>
            <value>
                <fullName>Adhesive Dried Out</fullName>
            </value>
            <value>
                <fullName>Adhesive Residue</fullName>
            </value>
            <value>
                <fullName>Adhesive - Sticky Roller</fullName>
            </value>
            <value>
                <fullName>Adhesive Transfer</fullName>
            </value>
            <value>
                <fullName>ADH Shows thru Vellum</fullName>
            </value>
            <value>
                <fullName>Adjustability Range</fullName>
            </value>
            <value>
                <fullName>Adverse Reaction - Animal</fullName>
            </value>
            <value>
                <fullName>Air Bubbles/Wrinkles</fullName>
            </value>
            <value>
                <fullName>Air Cushion</fullName>
            </value>
            <value>
                <fullName>Air Flow Restricted</fullName>
            </value>
            <value>
                <fullName>Amazon - NO MPR on package</fullName>
            </value>
            <value>
                <fullName>Appearance</fullName>
            </value>
            <value>
                <fullName>Application</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>