force-app/main/default/objects/Case_Product__c/fields/Per_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Per_Unit_Price__c</fullName>
    <description>IM3173588</description>
    <label>Per Unit Price</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>