force-app/main/default/objects/Case_Product__c/fields/Price_Comments__c.field-meta.xml
<CustomField>
    <fullName>Price_Comments__c</fullName>
    <label>Price Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>