force-app/main/default/objects/Case_Product__c/fields/Price_Floor_at_Pricing_Region__c.field-meta.xml
<CustomField>
    <fullName>Price_Floor_at_Pricing_Region__c</fullName>
    <label>Price Floor (at Pricing Region)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>