force-app/main/default/objects/Case_Product__c/fields/Pricing_Partner_End_User_Est_Total__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Partner_End_User_Est_Total__c</fullName>
    <formula>Requested_End_User_Price__c * Anticipated_Annual_Number_of_Units__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pricing Partner/End User Est Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>