force-app/main/default/objects/Case_Product__c/fields/Product_Accessories__c.field-meta.xml
<CustomField>
    <fullName>Product_Accessories__c</fullName>
    <label>Product Accessories</label>
    <length>255</length>
    <type>Text</type>
</CustomField>