force-app/main/default/objects/Case_Product__c/fields/Product_Form__c.field-meta.xml
<CustomField>
    <fullName>Product_Form__c</fullName>
    <formula>HYPERLINK("/apex/R5_PASCasePrintableProductForm?id="&amp;Case__r.Id&amp;"&amp;caseproductid="&amp;Id, "Printable View")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Form</label>
    <type>Text</type>
</CustomField>