force-app/main/default/objects/Case_Product__c/fields/Product_Owning_Division_Sales_District__c.field-meta.xml
<CustomField>
    <fullName>Product_Owning_Division_Sales_District__c</fullName>
    <label>Product Owning Division/Sales District</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No value for now</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>