force-app/main/default/objects/Case_Product__c/fields/Product_Request_Status__c.field-meta.xml
<CustomField>
    <fullName>Product_Request_Status__c</fullName>
    <label>CFM Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Awaiting Approval</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>