force-app/main/default/objects/Case_Product__c/fields/Product_SKU_ID__c.field-meta.xml
<CustomField>
    <fullName>Product_SKU_ID__c</fullName>
    <formula>Product__r.Product_SKU_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product/SKU ID</label>
    <type>Text</type>
</CustomField>