force-app/main/default/objects/Case_Product__c/fields/ProductNum__c.field-meta.xml
<CustomField>
    <fullName>ProductNum__c</fullName>
    <label>Product #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>