force-app/main/default/objects/Case_Product__c/fields/Profit_Center__c.field-meta.xml
<CustomField>
    <fullName>Profit_Center__c</fullName>
    <label>Profit Center</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1020-OLED Films</fullName>
            </value>
            <value>
                <fullName>1030-OLED OCA</fullName>
            </value>
            <value>
                <fullName>1040-Priv Lab Notes Flags</fullName>
            </value>
            <value>
                <fullName>1050-Private Label HOT &amp;</fullName>
            </value>
            <value>
                <fullName>1060-Sample Handling</fullName>
            </value>
            <value>
                <fullName>1070-Pathogen Detection</fullName>
            </value>
            <value>
                <fullName>1080-CMP Pad Bonding</fullName>
            </value>
            <value>
                <fullName>1100-Conv Bonded Primary</fullName>
            </value>
            <value>
                <fullName>1110-Coated Abrasives non</fullName>
            </value>
            <value>
                <fullName>1110-Micro Replicated Pro</fullName>
            </value>
            <value>
                <fullName>1130-Industrial Minerals</fullName>
            </value>
            <value>
                <fullName>1140-Ceramic Fibers Compo</fullName>
            </value>
            <value>
                <fullName>1150-Surface Cond Prod</fullName>
            </value>
            <value>
                <fullName>1170-GTA Private Label Se</fullName>
            </value>
            <value>
                <fullName>1190-Aerospace Adhesives</fullName>
            </value>
            <value>
                <fullName>1200-Incavas</fullName>
            </value>
            <value>
                <fullName>1210-Assembly Materials</fullName>
            </value>
            <value>
                <fullName>1220-Industrial</fullName>
            </value>
            <value>
                <fullName>1230-Perf Label Material</fullName>
            </value>
            <value>
                <fullName>1260-Struct &amp; Composites</fullName>
            </value>
            <value>
                <fullName>1290-Residential Water</fullName>
            </value>
            <value>
                <fullName>1300-GTA Trading Packagin</fullName>
            </value>
            <value>
                <fullName>1330-Electronics Abrasive</fullName>
            </value>
            <value>
                <fullName>1380-Specialty Chemicals</fullName>
            </value>
            <value>
                <fullName>1400-A-one Solutions</fullName>
            </value>
            <value>
                <fullName>1410-Specialty Fluids</fullName>
            </value>
            <value>
                <fullName>1420-AAD Abrasives</fullName>
            </value>
            <value>
                <fullName>1430-Filing Solutions</fullName>
            </value>
            <value>
                <fullName>1430-Promotional Markets</fullName>
            </value>
            <value>
                <fullName>1440-Package Protect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>