force-app/main/default/objects/Case_Product__c/fields/PW_Hardware__c.field-meta.xml
<CustomField>
    <fullName>PW_Hardware__c</fullName>
    <label>PW Hardware</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bair Paws 875</fullName>
            </value>
            <value>
                <fullName>Bair Hugger 50577 (Vet)</fullName>
            </value>
            <value>
                <fullName>Bair Hugger 775</fullName>
            </value>
            <value>
                <fullName>Ranger Fluid Warming 245</fullName>
            </value>
            <value>
                <fullName>Ranger Irrigation Warming 245</fullName>
            </value>
            <value>
                <fullName>Ranger Irrigation Warming 247</fullName>
            </value>
            <value>
                <fullName>Spot-On 3700</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>