force-app/main/default/objects/Case_Product__c/fields/Reason_Codes__c.field-meta.xml
<CustomField>
    <fullName>Reason_Codes__c</fullName>
    <description>PAS Product Reason Codes which are available to select for a particular product.</description>
    <label>Reason Codes</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>600 Tape Construction Change</fullName>
            </value>
            <value>
                <fullName>Accessory Failure</fullName>
            </value>
            <value>
                <fullName>Activation Issue</fullName>
            </value>
            <value>
                <fullName>Additional Information Needed</fullName>
            </value>
            <value>
                <fullName>Adhesion</fullName>
            </value>
            <value>
                <fullName>Adhesion - Adh Back</fullName>
            </value>
            <value>
                <fullName>Adhesion - High</fullName>
            </value>
            <value>
                <fullName>Adhesion - Hook/Loop</fullName>
            </value>
            <value>
                <fullName>Adhesion Loss - Hollow Arrow</fullName>
            </value>
            <value>
                <fullName>Adhesion Lost With Damage</fullName>
            </value>
            <value>
                <fullName>Adhesion - Low</fullName>
            </value>
            <value>
                <fullName>Adhesion Low - Home Depot Boxes</fullName>
            </value>
            <value>
                <fullName>Adhesion to Backplate - Hollow Arrow</fullName>
            </value>
            <value>
                <fullName>Adhesive Caused Color Change on Surface</fullName>
            </value>
            <value>
                <fullName>Adhesive Dried Out</fullName>
            </value>
            <value>
                <fullName>Adhesive Residue</fullName>
            </value>
            <value>
                <fullName>Adhesive - Sticky Roller</fullName>
            </value>
            <value>
                <fullName>Adhesive Transfer</fullName>
            </value>
            <value>
                <fullName>ADH Shows thru Vellum</fullName>
            </value>
            <value>
                <fullName>Adjustability Range</fullName>
            </value>
            <value>
                <fullName>Adverse Reaction - Animal</fullName>
            </value>
            <value>
                <fullName>Air Bubbles/Wrinkles</fullName>
            </value>
            <value>
                <fullName>Air Cushion</fullName>
            </value>
            <value>
                <fullName>Air Flow Restricted</fullName>
            </value>
            <value>
                <fullName>Amazon - NO MPR on package</fullName>
            </value>
            <value>
                <fullName>Appearance</fullName>
            </value>
            <value>
                <fullName>Application</fullName>
            </value>
            <value>
                <fullName>Auto</fullName>
            </value>
            <value>
                <fullName>Backer Plate Delamination</fullName>
            </value>
            <value>
                <fullName>Backer Plate Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>