force-app/main/default/objects/Case_Product__c/fields/Refund_Processed_Date__c.field-meta.xml
<CustomField>
    <fullName>Refund_Processed_Date__c</fullName>
    <description>The Date of when the refund was processed.</description>
    <label>Refund Processed Date</label>
    <type>Date</type>
</CustomField>