force-app/main/default/objects/Case_Product__c/fields/Requested_Distributor_Price__c.field-meta.xml
<CustomField>
    <fullName>Requested_Distributor_Price__c</fullName>
    <label>Requested Distributor Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>