force-app/main/default/objects/Case_Product__c/fields/Requested_End_User_Price__c.field-meta.xml
<CustomField>
    <fullName>Requested_End_User_Price__c</fullName>
    <label>Requested End User Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>