force-app/main/default/objects/Case_Product__c/fields/Requested_Products__c.field-meta.xml
<CustomField>
    <fullName>Requested_Products__c</fullName>
    <formula>Unlisted_Products__c +  Product__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requested Products</label>
    <type>Text</type>
</CustomField>