force-app/main/default/objects/Case_Product__c/fields/Sales_Organization__c.field-meta.xml
<CustomField>
    <fullName>Sales_Organization__c</fullName>
    <description>Values taken from SAP 8/4/17</description>
    <label>Sales Organization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Legacy Pre-SAP Deployment</fullName>
            </value>
            <value>
                <fullName>1000 3M US</fullName>
            </value>
            <value>
                <fullName>1100 Global Channel Services</fullName>
            </value>
            <value>
                <fullName>2000 3M Canada</fullName>
            </value>
            <value>
                <fullName>3111 3M Chile S.A.</fullName>
            </value>
            <value>
                <fullName>3117 3M Colombia SA</fullName>
            </value>
            <value>
                <fullName>4005 3M Ireland Limited</fullName>
            </value>
            <value>
                <fullName>4007 3M United Kingdom PL</fullName>
            </value>
            <value>
                <fullName>4020 3M France S.A.S.</fullName>
            </value>
            <value>
                <fullName>4022 Winterthur Technolog</fullName>
            </value>
            <value>
                <fullName>4024 Pouyet 3M Télécommun</fullName>
            </value>
            <value>
                <fullName>4029 3M Purification</fullName>
            </value>
            <value>
                <fullName>4033 3M Deutschland GMBH</fullName>
            </value>
            <value>
                <fullName>4041 3M España S.L.</fullName>
            </value>
            <value>
                <fullName>4045 3M España S.L. Sucur</fullName>
            </value>
            <value>
                <fullName>4046 3M a/s</fullName>
            </value>
            <value>
                <fullName>4049 Suomen 3M Oy</fullName>
            </value>
            <value>
                <fullName>4053 3M Norge A/S</fullName>
            </value>
            <value>
                <fullName>4054 3M Svenska AB</fullName>
            </value>
            <value>
                <fullName>4058 Eknas IndustristadAB</fullName>
            </value>
            <value>
                <fullName>4059 3M Belgium BVBA/SPRL</fullName>
            </value>
            <value>
                <fullName>4060 Wendt Boart S.A.</fullName>
            </value>
            <value>
                <fullName>4069 3M Nederland B.V.</fullName>
            </value>
            <value>
                <fullName>4073 3M (Schweiz) GmbH</fullName>
            </value>
            <value>
                <fullName>4079 3M Oesterreich GmbH</fullName>
            </value>
            <value>
                <fullName>4100 3M Poland Sp. z o.o.</fullName>
            </value>
            <value>
                <fullName>4108 3M Russia</fullName>
            </value>
            <value>
                <fullName>4112 Dyneon GmbH</fullName>
            </value>
            <value>
                <fullName>4137 EMFI SAS</fullName>
            </value>
            <value>
                <fullName>6022 3M Malaysia Sdn. Bhd</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>