force-app/main/default/objects/Case_Product__c/fields/Sample_UOM__c.field-meta.xml
<CustomField>
    <fullName>Sample_UOM__c</fullName>
    <label>Sample UOM</label>
    <length>40</length>
    <type>Text</type>
</CustomField>