force-app/main/default/objects/Case_Product__c/fields/SAP_10_Digit_Configurable_Material_ID__c.field-meta.xml
<CustomField>
    <fullName>SAP_10_Digit_Configurable_Material_ID__c</fullName>
    <label>SAP 10-Digit Configurable Material ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>