force-app/main/default/objects/Case_Product__c/fields/SAP_10_Digit_Phase_Out_SKU__c.field-meta.xml
<CustomField>
    <fullName>SAP_10_Digit_Phase_Out_SKU__c</fullName>
    <label>SAP 10-Digit Phase Out 3M ID #</label>
    <length>10</length>
    <type>Text</type>
</CustomField>