force-app/main/default/objects/Case_Product__c/fields/SAP_10_Digit_SKU__c.field-meta.xml
<CustomField>
    <fullName>SAP_10_Digit_SKU__c</fullName>
    <description>10-Digit SAP SKU</description>
    <label>SAP 10-Digit 3M ID #</label>
    <length>10</length>
    <type>Text</type>
</CustomField>