force-app/main/default/objects/Case_Product__c/fields/Sent_for_Fulfillment__c.field-meta.xml
<CustomField>
    <fullName>Sent_for_Fulfillment__c</fullName>
    <description>The Date/Time that a particular product has been sent to RR Donnelly for fulfillment.</description>
    <label>Sent for Fulfillment</label>
    <type>DateTime</type>
</CustomField>