force-app/main/default/objects/Case_Product__c/fields/Shipping_Charges__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Charges__c</fullName>
    <description>Shipping Charge for the product, used for PAS fulfillment</description>
    <label>Shipping Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>