force-app/main/default/objects/Case_Product__c/fields/SS_Actual_Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>SS_Actual_Ship_Date__c</fullName>
    <description>Scott Safety field - When did the product ship to the customer?</description>
    <inlineHelpText>When did the product ship to the customer?</inlineHelpText>
    <label>SS-Actual Ship Date</label>
    <type>Date</type>
</CustomField>